# GCXX

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt
examples/0_Basic/: CMakeLists.txt  main.cpp
examples/Reduction/: CMakeLists.txt  main.cpp  main.hpp
examples/by_api_module/: CMakeLists.txt
examples/by_api_module/event_wrapper/: CMakeLists.txt  main.cpp
examples/by_api_module/graph_wrapper/: CMakeLists.txt  main.cpp
examples/by_api_module/graph_wrapper_conditional/: CMakeLists.txt  main.cpp
examples/by_api_module/graph_wrapper_difftypes/: CMakeLists.txt  main.cpp
examples/by_api_module/graph_wrapper_simple/: CMakeLists.txt  main.cpp
examples/by_api_module/mdspan_htu/: CMakeLists.txt  main.cpp
examples/by_api_module/stream_wrapper/: CMakeLists.txt  main.cpp
examples/cmake/: argparse.cmake  fmt.cmake
examples/for_clang_tidy/: CMakeLists.txt  main.cpp
examples/multi_gpu_testspace/: CMakeLists.txt  main.cpp  main.hpp
examples/vector_add/: CMakeLists.txt  kernels.cpp  main.cpp  main.hpp
examples/vector_add_overlap/: CMakeLists.txt  main.cpp  main.hpp
lib/: CMakeLists.txt
lib/cmake/: mdspan.cmake
lib/gcxx/: api.hpp  cooperative_groups.hpp  epilogue.hpp  prologue.hpp
lib/gcxx/backend/: backend.hpp  cuda_backend.hpp  hip_backend.hpp
lib/gcxx/internal/: epilogue.hpp  prologue.hpp
lib/gcxx/macros/: define_macros.hpp
lib/gcxx/runtime/: device.hpp  event.hpp  graph.hpp  launch.hpp  memory.hpp  occupancy.hpp  runtime_error.hpp  stream.hpp  vector.hpp
lib/gcxx/runtime/details/: device.inl  device_handle.inl  device_memory_helper.hpp  ensure_device.inl  event.inl  event_ref.inl  event_view.inl  event_wrap.inl  graph.inl  graph_exec.inl  graph_exec_view.inl  graph_node.inl  graph_view.inl  helper_function.hpp  launch_kernels.inl  runtime_error.inl  stream.inl  stream_ref.inl  stream_view.inl  stream_wrap.inl  type_traits.hpp
lib/gcxx/runtime/details/device/: device.inl  device_handle.inl  ensure_device.inl
lib/gcxx/runtime/details/event/: event.inl  event_view.inl
lib/gcxx/runtime/details/graph/: graph.inl  graph_exec.inl  graph_exec_view.inl  graph_node.inl  graph_view.inl
lib/gcxx/runtime/details/launch/: launch_config.inl  launch_kernels.inl
lib/gcxx/runtime/details/memory/: device_memory_helper.hpp
lib/gcxx/runtime/details/stream/: stream.inl  stream_view.inl
lib/gcxx/runtime/details/vector/: vector_base.hpp
lib/gcxx/runtime/device/: device.hpp  device_handle.hpp  device_structs.hpp  ensure_current_device.hpp  ensure_device.hpp
lib/gcxx/runtime/error/: runtime_error.hpp  runtime_error_types.hpp  runtime_exception.hpp
lib/gcxx/runtime/event/: event.hpp  event_base.hpp  event_ref.hpp  event_view.hpp  event_wrap.hpp
lib/gcxx/runtime/flags/: device_flags.hpp  event_flags.hpp  eventflags.hpp  graph_flags.hpp  memory_flags.hpp  occupancy_flags.hpp  stream_flags.hpp  streamflags.hpp
lib/gcxx/runtime/graph/: graph.hpp  graph_exec.hpp  graph_exec_view.hpp  graph_kernel_params.hpp  graph_node.hpp  graph_nodes.hpp  graph_params.hpp  graph_view.hpp
lib/gcxx/runtime/graph/nodes/: child_graph_node_view.hpp  graph_node_view.hpp
lib/gcxx/runtime/graph/params/: graph_host_node_params.hpp  graph_kernel_node_params.hpp  graph_kernel_params.hpp  graph_memcpy3d_params.hpp  graph_memset_params.hpp
lib/gcxx/runtime/launch/: launch_config.hpp  launch_kernels.hpp
lib/gcxx/runtime/memory/: copy.hpp  memory_helpers.hpp  memset.hpp
lib/gcxx/runtime/memory/allocators/: device_allocator.hpp  host_allocator.hpp
lib/gcxx/runtime/memory/mempool/: mempool.hpp  (+2 more)
lib/gcxx/runtime/span/: span.hpp
lib/gcxx/runtime/stream/: stream.hpp  stream_ref.hpp  stream_view.hpp  stream_wrap.hpp
lib/gcxx/runtime/vector/: vector.hpp  vector_base.hpp
lib/gcxx/types/: shared_mem.hpp  vector_types.hpp  vector_types_op.hpp
lib/gpucxx/: api.hpp
lib/gpucxx/backend/: backend.hpp  cuda_backend.hpp  hip_backend.hpp
lib/gpucxx/macros/: define_macros.hpp  undefine_macros.hpp
lib/gpucxx/runtime/: device.hpp  event.hpp  memory.hpp  runtime_error.hpp  stream.hpp
lib/gpucxx/runtime/__details/: ensure_device.inl  event.inl  event_ref.inl  launch_config.inl  runtime_error.inl  stream.inl  stream_ref.inl
lib/gpucxx/runtime/__device/: ensure_device.hpp
lib/gpucxx/runtime/__error/: runtime_error.hpp
lib/gpucxx/runtime/__event/: event.hpp  event_base.hpp  event_ref.hpp
lib/gpucxx/runtime/__flags/: eventflags.hpp  streamflags.hpp
lib/gpucxx/runtime/__launch/: launch_config.hpp
lib/gpucxx/runtime/__memory/: copy.hpp
lib/gpucxx/runtime/__stream/: stream.hpp  stream_base.hpp  stream_ref.hpp
lib/gpucxx/runtime/__vector/: vector.hpp  vector_base.hpp
lib/gpucxx/runtime/details/: device.inl  ensure_device.inl  event.inl  event_ref.inl  launch_config.inl  runtime_error.inl  stream.inl  stream_ref.inl
lib/gpucxx/runtime/device/: ensure_device.hpp
lib/gpucxx/runtime/error/: runtime_error.hpp
lib/gpucxx/runtime/event/: event.hpp  event_base.hpp  event_ref.hpp
lib/gpucxx/runtime/flags/: eventflags.hpp  streamflags.hpp
lib/gpucxx/runtime/launch/: launch_config.hpp
lib/gpucxx/runtime/memory/: copy.hpp
lib/gpucxx/runtime/span/: span.hpp
lib/gpucxx/runtime/stream/: stream.hpp  stream_ref.hpp
lib/gpucxx/runtime/vector/: vector.hpp  vector_base.hpp
lib/include/gpucxx/: api.hpp
lib/include/gpucxx/backend/: backend.hpp  cuda_backend.hpp
lib/include/gpucxx/error/: runtime_error.hpp
lib/include/gpucxx/runtime/: device.hpp  event.hpp  memory.hpp  runtime_error.hpp  stream.hpp
lib/include/gpucxx/utils/: define_specifiers.hpp  undefine_specifiers.hpp
testing/: CMakeLists.txt
testing/cmake/: GTest.cmake
testing/common/: tests_common.hpp
testing/error_testing/: CMakeLists.txt  test_runtime_error.cpp
testing/event_testing/: CMakeLists.txt  event_base_test.cpp  event_ref_test.cpp  test_event.cpp  test_event_base.cpp  test_event_ref.cpp  test_event_view.cpp  test_event_wrap.cpp
testing/vector_types_testing/: CMakeLists.txt  test_vector_ops.cpp  test_vector_types.cpp
(+28 files in other folders)
